Layout issue needs attention: GROOV-1521

--- a/app/themes/groove-tech/stylesheets/custom.css
+++ b/app/themes/groove-tech/stylesheets/custom.css
@@ -374,10 +374,6 @@ body{
   color: #dedbdb !important;
 }
 
-.gradient-well-inner{
-  max-width: 1200px !important;
-}
-
 .left-inner-addon {
   position: relative;
 }
